--- a/frontend/item-template.html
+++ b/frontend/item-template.html
@@ -4,7 +4,7 @@
 <head>
 	<meta property="og:type" content="article" />
 	<meta property="og:title" content="{{if .Comments}}{{with $x := index .Comments 0}}{{$x.Text}}{{end}}{{end}}" />	
-	<meta property="og:description" content="{{if .Comments}}{{with $x := index .Comments 0}}Image commented by {{$x.Author}} on m3m3{{end}}{{else}}Write your own comment on m3m3!{{end}}" />
+	<meta property="og:description" content="{{if .Comments}}{{with $x := index .Comments 0}}@{{$x.Author}} on m3m3{{end}}{{else}}Write your own comment on m3m3!{{end}}" />
 	<meta property="og:image" content="{{.ImgUrl}}" />
 	<meta property="og:image:width" content="600"/>
 	<meta property="og:image:height" content="400"/>
@@ -99,7 +99,9 @@
 		<div class="comment-container">
 
 		{{range .Comments}}   				
-			<div class="comment">				
+			<div class="comment">	
+				{{if eq $.FromUser .Author}}
+					<a style='float:right;margin-left:5px' href="{{$.BaseUrl}}/services/deletecomment?comment_id={{.Id}}">x</a>	{{end}}
 				<a style='text-decoration:none;' type="icon_link" onClick="window.open(
 					'https://www.facebook.com/dialog/share?app_id=483418555153102&display=popup&href={{$.ItemUrl}}%26comment_id={{.Id}}&redirect_uri={{$.ItemUrl}}%26comment_id={{.Id}}',
 					'sharer', 'toolbar=0,status=0,width=580,height=325');" href="javascript: void(0)">
